fix: use update(null, wrapper) for LambdaUpdateWrapper